perf(antijob): batch autoAssignDentist queries, fix test compile error
Reduces autoAssignDentist from up to 3N+1 sequential DB round-trips
(N = active dentists) to 3 batched queries using IN-clause lookups
for work schedules and conflict/count checks. Final lock + conflict
check on the chosen dentist is unchanged.

Also fixes a build-breaking compile error in AppointmentServiceTest
(List.<Object[]>of(single array) is ambiguous between "one element"
and "spread as varargs" — replaced with Collections.singletonList).

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>